added some getters
